source/stylesheets/app.css
/* --------------------------------------------------
   Table of Contents
-----------------------------------------------------
:: Shared Styles
:: Profile
:: Page Name 2
*/

/* -----------------------------------------
   Shared Styles
----------------------------------------- */
body{
    background: #242424;
}
.body{
    background: #fff url("../images/noise.png");
}
.body>header {
    padding: 26px;
    background: #242424;
}

@media (max-width:768px) {
    .body>header {
        margin-left: -20px;
        margin-right: -20px;
    }
}

.body>header h1 a, .body>header h1 a:visited, .body>header h1 a:active, .body>header h1 a:link {
    color: #fff;
}

.navbar .brand {
    margin-left: 0;
}

.navbar .pull-right .brand {
    margin-left: -20px;
}

@media (max-width:979px) {
    .navbar-search {
        margin: 10px;
        width: 100%;
    }

    .navbar-search .search-query {
        width: 97%;
        padding: 1%;
    }
}

#main .row {
    background: url("../images/noise.png");
    min-height: 600px;
}

#main aside {
    padding: 20px 0 40px 20px;
    margin: 15px 0;
    background-image: -webkit-gradient(linear, 0 0, 0 1px, from(#ccc), to(transparent));
    background-image: -webkit-linear-gradient(#fff, transparent);
    background-image: -moz-linear-gradient(#fff, transparent);
    background-image: -o-linear-gradient(#fff, transparent);
    background-image: linear-gradient(#fff, transparent);
    -moz-background-size: 0;
    background-size: 1px;
    background-position: 0 0;
    background-repeat: no-repeat;
}

#main aside >* {
}

#main aside h1 {
    font-size: 24.5px;
}

article>footer {
    clear: both;
}

.fb_iframe_widget {
    width: 275px;
}

.body>footer {
    color: #7ab5d3;
    background: #242424;
}

.body>footer>* {
    padding: 26px;
    /*-webkit-border-radius: 0 0 10px 10px;
    -moz-border-radius: 0 0 10px 10px;
    -o-border-radius: 0 0 10px 10px;
    -ms-border-radius: 0 0 10px 10px;
    border-radius: 0 0 10px 10px;
    border: 1px solid #ddd;*/
}

/* -----------------------------------------
   Profile
----------------------------------------- */
.vcard .org {
    font-weight: 600;
}

.vcard .org .title {
    font-style: italic;
    font-weight: normal;
}

.vcard [class^="icon-"], .vard [class*=" icon-"] {
    background: url("../images/profile_icons.png") no-repeat 24px 24px;
}

.vcard .icon-google-plus {
    background-position: 0 0;
}

.vcard .icon-linked-in {
    background-position: -15px 0;
}

.vcard .icon-github {
    background-position: -30px 0;
}

.vcard .icon-twitter {
    background-position: -45px 0;
}

.vcard .icon-email {
    background-position: -60px 0;
}

